Minor fixes for synchronization and other minor tidy ups.
git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/skunk/qa_refactor/trunk@1490046 13f79535-47bb-0310-9956-ffa450edef68